--- a/Project/WebContent/add_film.html
+++ b/Project/WebContent/add_film.html
@@ -23,7 +23,7 @@
 		<input type="radio" name="sala_cinema" value="animazione"> Animazione <br />
 		<input type="radio" name="sala_cinema" value="romantico">Romantico<br />
 		<label>Locandina film:</label>
-		<input type="file" name="locandina"> <br /><br />
+		<input type="file" name="locandina" id="file" value="document.getElementById('file').value"> <br /><br />
  		<input type="submit" value="Insert">		
 	</form>
 </body>
