--- a/Project/WebContent/registrazione.html
+++ b/Project/WebContent/registrazione.html
@@ -5,7 +5,7 @@
 <title>Registrazione</title>
 </head>
 <body>
-	<form action="http://localhost:8080/Project/registrazione" method="POST">
+	<form action="http://localhost:8080/Project/Register" method="POST">
 	<h5>REGISTRAZIONE </h5>
 	Username: <input type="text" name="username"><br /><br />
 	Password: <input type="password" name="password"><br /><br />
