--- a/Project/WebContent/add_film.html
+++ b/Project/WebContent/add_film.html
@@ -8,8 +8,11 @@
 <title>Add_Film</title>
 </head>
 <body>
-	<h1>Questa pagina aggiunge i film.</h1>
-	<form action="http://localhost:8080/Project/Add_film" method="POST" id="add" enctype="multipart/form-data" >
+<div class="header">
+	<h1 class="title">AGGIUNGI FILM</h1>
+</div>
+<div class="content"  >
+	<form action="http://localhost:8080/Project/Add_film" method="POST" enctype="multipart/form-data">	
 		<label>Titolo film:</label>
 		<input type="text" name="titolo"> <br /><br />
 		<label>Data riproduzione film:</label>
@@ -18,8 +21,6 @@
 		<input type="time" name="ora_init" id="ora_init"> <br /><br />
 		<label>Orario termine film:</label>
 		<input type="time" name="ora_fine" id="ora_fine"> <br /><br />
-		<label>Durata film:</label>
-		<input type=text name="durata" id="durata"> <br /><br />
 		<label>Sala proiezione del film:</label><br />
 		<input type="radio" name="sala" value="Sala_1" checked> Sala 1 <br />
 		<input type="radio" name="sala" value="Sala_2"> Sala 2 <br />
@@ -29,5 +30,6 @@
 		<input type="file" name="file" id="file"> <br /><br />
  		<input type="submit" value="Insert">		
 	</form>
+</div>
 </body>
 </html>
